# DDD-Chat-FastAPI-Kafka-MongoDB-Example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: kafka_test_consumer.py  kafka_test_producer.py
app/application/api/: lifespan.py  main.py  schemas.py
app/application/api/common/websockets/: managers.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/application/api/messages/websockets/: messages.py
app/application/api/websockets/: messages.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  chats.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/integrations/notifications/: dots.py
app/infra/integrations/notifications/clients/: base.py  telegram.py
app/infra/message_brokers/: base.py  kafka.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/infra/websockets/: managers.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: conftest.py  test_messages.py
docker_compose/: app.yaml  messaging.yaml  storages.yaml
